[gd_scene load_steps=2 format=3 uid="uid://cquyih57budum"]

[ext_resource type="Script" path="res://src/Scripts/Controllers/MainMenu.gd" id="1_8b0qk"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_8b0qk")

[node name="Main" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BtnContainer" type="VBoxContainer" parent="CanvasLayer/Main"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.5
offset_top = -121.0
offset_right = 40.5
grow_horizontal = 2
grow_vertical = 0

[node name="PlayBtn" type="Button" parent="CanvasLayer/Main/BtnContainer"]
layout_mode = 2
text = "Play"

[node name="SettingsBtn" type="Button" parent="CanvasLayer/Main/BtnContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitBtn" type="Button" parent="CanvasLayer/Main/BtnContainer"]
layout_mode = 2
text = "Quit"

[node name="Settings" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Music_Slider" type="HSplitContainer" parent="CanvasLayer/Settings"]
layout_mode = 2
offset_left = 34.0
offset_top = 99.0
offset_right = 147.0
offset_bottom = 122.0

[node name="Label" type="Label" parent="CanvasLayer/Settings/Music_Slider"]
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="CanvasLayer/Settings/Music_Slider"]
layout_mode = 2
size_flags_vertical = 4
max_value = 40.0
value = 40.0

[node name="Sfx_Slider" type="HSplitContainer" parent="CanvasLayer/Settings"]
layout_mode = 2
offset_left = 52.0
offset_top = 123.0
offset_right = 147.0
offset_bottom = 146.0

[node name="Label" type="Label" parent="CanvasLayer/Settings/Sfx_Slider"]
layout_mode = 2
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="CanvasLayer/Settings/Sfx_Slider"]
layout_mode = 2
size_flags_vertical = 4
max_value = 40.0
value = 40.0

[node name="BtnContainer" type="VBoxContainer" parent="CanvasLayer/Settings"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.5
offset_top = -121.0
offset_right = 40.5
grow_horizontal = 2
grow_vertical = 0

[node name="BackBtn" type="Button" parent="CanvasLayer/Settings/BtnContainer"]
layout_mode = 2
text = "Back"

[node name="SettingsLabel" type="Label" parent="CanvasLayer/Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -119.0
offset_right = 37.0
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 2
text = "Settings"
horizontal_alignment = 1

[connection signal="pressed" from="CanvasLayer/Main/BtnContainer/PlayBtn" to="CanvasLayer" method="_on_play_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/BtnContainer/SettingsBtn" to="CanvasLayer" method="_on_settings_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/BtnContainer/QuitBtn" to="CanvasLayer" method="_on_quit_btn_pressed"]
[connection signal="value_changed" from="CanvasLayer/Settings/Music_Slider/MusicSlider" to="CanvasLayer" method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Settings/Sfx_Slider/SFXSlider" to="CanvasLayer" method="_on_sfx_slider_value_changed"]
